WIP on document

--- a/master-thesis/bibliography.bib
+++ b/master-thesis/bibliography.bib
@@ -36,6 +36,19 @@
   year = {1992}
 }
 
+@ARTICLE{mit99,
+author={J. Mitola and G. Q. Maguire},
+journal={IEEE Personal Communications},
+title={Cognitive radio: making software radios more personal},
+year={1999},
+volume={6},
+number={4},
+pages={13-18},
+keywords={cellular radio;cognitive systems;equalisers;knowledge representation languages;model-based reasoning;personal communication networks;protocols;software agents;software architecture;telecommunication computing;GSM;RF bands;air interfaces;automated reasoning;cognitive radio agents;multiband multimode personal communications systems;personal services;protocol stack;radio equalizer;radio etiquette;radio knowledge representation language;radio networks;radio nodes;radio propagation;radio spectrum;radio-domain model-based reasoning;radio-domain-aware intelligent agents;software modules;software radios;spatial patterns;temporal patterns;Application specific integrated circuits;Baseband;Cognitive radio;Equalizers;GSM;Hardware;Modems;Radio frequency;Software algorithms;Software radio},
+doi={10.1109/98.788210},
+ISSN={1070-9916},
+month={Aug},}
+
 
 @ARTICLE{hay05,
   title = {{Cognitive radio: brain-empowered wireless communications}},
@@ -76,7 +89,7 @@
   author = {M. Tuechler and R. Koetter and A.C. Singer},
   journal = {IEEE TRANSACTIONS ON COMMUNICATIONS},
   volume = {50},
-  month = {May}  
+  month = {May}
 }
 
 @misc{gnrDoc,
@@ -160,7 +173,7 @@ note = {Accessed 2015-02-12}
   author = {Helmling, Michael and Scholl, Stefan},
   year = {2015},
   journal = {University of Kaiserslautern},
-  howpublished = "\url{www.uni-kl.de/channel-codes}", 
+  howpublished = "\url{www.uni-kl.de/channel-codes}",
   note = {Accessed 2015-11-19},
 }
 
@@ -169,7 +182,7 @@ note = {Accessed 2015-02-12}
   year = {2013},
   author = {J. Demel and S. Koslowski and F. Jondral},
   journal = {SDR-WInnComm-Europe-2013},
-  month = {June}  
+  month = {June}
 }
 
 @article{lte:springer2015,
@@ -263,7 +276,7 @@ note = {Accessed 2015-02-12}
  address = {Urbana},
  isbn = {0252725468}
  }
- 
+
 @book{Richardson:2008:MCT,
   author = {Richardson, Tom and Urbanke, Ruediger},
   title = {Modern Coding Theory},
@@ -393,3 +406,81 @@ month={Oct},
 	volume = {48},
 	year = {2012},
 }
+
+@ARTICLE{dyspan17,
+author={F. Wunsch and F. Paisana and S. Rajendran and A. Selim and P. Alvarez and S. Müller and S. Koslowski and B. Van den Bergh and S. Pollin},
+journal={IEEE Transactions on Cognitive Communications and Networking},
+title={DySPAN Spectrum Challenge: Situational Awareness and Opportunistic Spectrum Access Benchmarked},
+year={2017},
+volume={3},
+number={3},
+pages={550-562},
+keywords={cognitive radio;radio spectrum management;DySPAN spectrum Challenge;IEEE DySPAN 2017;opportunistic spectrum access benchmark;performance evaluation;situational awareness;software repositories;Benchmark testing;Databases;Delays;OFDM;Receivers;Throughput;Wireless communication;FBMC;Spectrum challenge;cognitive radio;deep learning},
+doi={10.1109/TCCN.2017.2745682},
+ISSN={},
+month={Sept},}
+
+@INPROCEEDINGS{dyspan17_ours,
+author={F. Wunsch and S. Koslowski and S. Müller and N. Cuervo and F. K. Jondral},
+booktitle={2017 IEEE International Symposium on Dynamic Spectrum Access Networks (DySPAN)},
+title={A cognitive overlay system based on FBMC},
+year={2017},
+volume={},
+number={},
+pages={1-2},
+keywords={channel bank filters;cognitive radio;field programmable gate arrays;laptop computers;software radio;FBMC;FPGA;PU error rate;USRP X310;behavioral patterns;cognitive overlay system;continuous low-delay channel monitoring;critical signal processing components;feedback information;filter bank multicarrier;heterogeneous SDR platform;heterogeneous software defined radio platform;off-the-shelf consumer laptop;out-of-band radiation;physical layer waveform;primary user transmission parameters;Delays;Dynamic spectrum access;Field programmable gate arrays;Interference;Portable computers;Reliability;Synchronization},
+doi={10.1109/DySPAN.2017.7920782},
+ISSN={},
+month={March},}
+
+@ARTICLE{overlay,
+author={A. Goldsmith and S. A. Jafar and I. Maric and S. Srinivasa},
+journal={Proceedings of the IEEE},
+title={Breaking Spectrum Gridlock With Cognitive Radios: An Information Theoretic Perspective},
+year={2009},
+volume={97},
+number={5},
+pages={894-914},
+keywords={cognitive radio;a priori rules;cognitive radios;degree of freedom;information theoretic perspective;intelligent wireless communication device;spectrum gridlock;spectrum utilization;wireless network design;Availability;Bandwidth;Cognitive radio;FCC;Frequency;Guidelines;Radio spectrum management;Telecommunication standards;Wireless communication;Wireless networks;Capacity;cognitive radio;degrees of freedom;interweave;overlay;side information;underlay},
+doi={10.1109/JPROC.2009.2015717},
+ISSN={0018-9219},
+month={May},}
+
+@INPROCEEDINGS{mit_multimedia,
+author={J. Mitola},
+booktitle={Mobile Multimedia Communications, 1999. (MoMuC '99) 1999 IEEE International Workshop on},
+title={Cognitive radio for flexible mobile multimedia communications},
+year={1999},
+volume={},
+number={},
+pages={3-10},
+keywords={cognitive systems;land mobile radio;model-based reasoning;multimedia communication;protocols;telecommunication computing;3G infrastructure;bandwidth;cognitive radio;fire;flexible mobile multimedia communications;formal radio-etiquette protocols;model-based reasoning;multimedia content;police;radio spectrum allocation;rescue;software radio;spectrum pooling;third-generation services;wireless multimedia applications;Bandwidth;Cognitive radio;Fires;Inference mechanisms;Investments;Mobile communication;Multimedia communication;Protocols;Software radio;Wireless communication},
+doi={10.1109/MOMUC.1999.819467},
+ISSN={},
+month={},}
+
+@INPROCEEDINGS{mueller13,
+author={A. Kaushik and M. Mueller and F. K. Jondral},
+booktitle={ISWCS 2013; The Tenth International Symposium on Wireless Communication Systems},
+title={Cognitive Relay: Detecting Spectrum Holes in a Dynamic Scenario},
+year={2013},
+volume={},
+number={},
+pages={1-2},
+keywords={},
+doi={},
+ISSN={},
+month={Aug},}
+
+@INPROCEEDINGS{dyspan15,
+author={A. Kaushik and F. Wunsch and A. Sagainov and N. Cuervo and J. Demel and S. Koslowski and H. Jäkel and F. Jondral},
+booktitle={2015 IEEE International Symposium on Dynamic Spectrum Access Networks (DySPAN)},
+title={Spectrum sharing for 5G wireless systems (Spectrum sharing challenge)},
+year={2015},
+volume={},
+number={},
+pages={1-2},
+keywords={5G mobile communication;radio spectrum management;5G wireless systems;hardware deployment;primary system;secondary system;spectrum sharing;Array signal processing;Detectors;Hardware;Interference;Receivers;Software},
+doi={10.1109/DySPAN.2015.7343841},
+ISSN={},
+month={Sept},}
