Document: Introduction work

--- a/master-thesis/abbreviations.tex
+++ b/master-thesis/abbreviations.tex
@@ -4,6 +4,7 @@
 \begin{acronym}[TROLL]
   \acro{AGC}[AGC]{Automatic Gain Control}
   \acro{AKF}[AKF]{Autokorrelationsfunktion}
+  \acro{AI}[AI]{Artificial Intelligence}
   \acro{API}[API]{Application Program Interface}
   \acro{AWGN}[AWGN]{Additive White Gaussian Noise}
   \acro{AVX}[AVX]{Advanced Vector Extensions}
@@ -15,17 +16,23 @@
   \acro{BSC}[BSC]{Binary Symmetric Channel}
 
   \acro{CEL}[CEL]{Communications Engineering Lab}
+  \acro{ComSoc}[ComSoc]{IEEE Communications Society}
   \acro{CPU}[CPU]{Central Processing Unit}
+  \acro{CR}[CR]{Cognitive Radio}
 
   \acro{DFT}[DFT]{Discrete Fourier Transform}
+  \acro{DL}[DL]{Deep Learning}
   \acro{DMC}[DMC]{Discrete Memoryless Channel}
   \acro{dSNR}[dSNR]{design-\ac{SNR}}
   \acro{DSP}[DSP]{Digital Signal Processing}
+  \acro{DySpan}[DySpan]{Dynamic Spectrum Access Networks}
 
   \acro{ESA}[ESA]{European Space Agency}
+  \acro{EMC}[EMC]{IEEE Electromagnetic Compatibility Society}
 
   \acro{FER}[FER]{Frame Error Rate}
   \acro{FFT}[FFT]{Fast Fourier Transform}
+  \acro{FCC}[FCC]{Federal Coomunications Commision (USA)}
 
   \acro{GPP}[GPP]{General Purpose Processor}
   \acro{GRC}[GRC]{GNU Radio Companion}
@@ -36,6 +43,9 @@
   \acro{VOLK}[VOLK]{Vector-Optimized Library of Kernels}
 
   \acro{IDFT}[IDFT]{Inverse Discrete Fourier Transform}
+  \acro{ITU}[ITU]{International Telecommunications Union}
+  \acro{IEEE}[IEEE]{Institute of Electrical and Electronics Engineers}
+
   \acro{KIT}[KIT]{Karlsruhe Institute of Technology}
 
   \acro{LR}[LR]{Likelihood Ratio}
@@ -43,18 +53,24 @@
   \acro{LTE}[LTE]{Long Term Evolution}
 
   \acro{MAP}[MAP]{Maximum A-Posteriori}
-  \acro{ML}[ML]{Maximum Likelihood}
+  \acro{ML}[ML]{Machine Learning}
 
   \acro{NRZ}[NRZ]{Non-Return-to-Zero}
+
+  \acro{Ofcom}[OFCOM]{U.K. Offices of Communications}
+
+  \acro{PU}[PU]{Primary User}
 
   \acro{RV}[RV]{Random Variable}
 
   \acro{SC}[SC]{Successive Cancellation}
+  \acro{SCC41}[SCC41]{Standards Coordinating Committee 41}
   \acro{SCL}[SCL]{Successive Cancellation List}
   \acro{SDR}[SDR]{Software-Defined Radio}
   \acro{SNR}[SNR]{Signal-to-Noise-Ratio}
   \acro{SPC}[SPC]{Single-Parity-Check}
   \acro{SSE}[SSE]{Streaming SIMD Extensions}
+  \acro{SU}[SU]{Secundary User}
 
  \acro{UML}[UML]{Unified Modeling Language}
 \end{acronym}
