--- a/master-thesis/bibliography.bib
+++ b/master-thesis/bibliography.bib
@@ -484,3 +484,16 @@ keywords={5G mobile communication;radio spectrum management;5G wireless systems;
 doi={10.1109/DySPAN.2015.7343841},
 ISSN={},
 month={Sept},}
+
+@ARTICLE{1391031,
+author={S. Haykin},
+journal={IEEE Journal on Selected Areas in Communications},
+title={Cognitive radio: brain-empowered wireless communications},
+year={2005},
+volume={23},
+number={2},
+pages={201-220},
+keywords={channel estimation;cognitive systems;learning (artificial intelligence);power control;radio spectrum management;software radio;stochastic games;brain-empowered wireless communication;channel-state estimation;cognitive radio;interference temperature;machine learning;predictive modeling;radio electromagnetic spectrum;radio-scene analysis;software-defined radio;stochastic games;transmit-power control;understanding-by-building;Channel estimation;Cognitive radio;Electromagnetic spectrum;Intelligent systems;Interference;Predictive models;Radio control;Radio spectrum management;Temperature control;Wireless communication},
+doi={10.1109/JSAC.2004.839380},
+ISSN={0733-8716},
+month={Feb},}
