--- a/master-thesis/thesis-master.tex
+++ b/master-thesis/thesis-master.tex
@@ -61,7 +61,7 @@
 %  \listoffigures		% if you want, not usual
 %  \listoftables		% if you want, not usual
   \include{abbreviations}	% use the acronym package. Already include with the template.
-  \bibliography{bibliography}	% include bibliography.bib and with formating etc.
+  \bibliography{lib}	% include bibliography.bib and with formating etc.
 
 
 \end{document}
