--- a/master-thesis/abbreviations.tex
+++ b/master-thesis/abbreviations.tex
@@ -14,6 +14,7 @@
   \acro{BDMC}[BDMC]{binary \acs{DMC}}
   \acro{BP}[BP]{Belief Propagation}
   \acro{BSC}[BSC]{Binary Symmetric Channel}
+  \acro{BW}[BW]{Bandwidth}
 
   \acro{CEL}[CEL]{Communications Engineering Lab}
   \acro{ComSoc}[ComSoc]{IEEE Communications Society}
@@ -64,7 +65,7 @@
   \acro{RV}[RV]{Random Variable}
 
   \acro{SC}[SC]{Successive Cancellation}
-  \acro{SCC41}[SCC41]{Standards Coordinating Committee 41}
+  \acro{SCC}[SCC41]{Standards Coordinating Committee 41}
   \acro{SCL}[SCL]{Successive Cancellation List}
   \acro{SDR}[SDR]{Software-Defined Radio}
   \acro{SNR}[SNR]{Signal-to-Noise-Ratio}
