--- a/master-thesis/thesis-master.tex
+++ b/master-thesis/thesis-master.tex
@@ -31,6 +31,15 @@
 \usepackage{subcaption}
 \usepackage{todonotes} % great for draft annotations
 
+% Added additionally to the template
+\usepackage{standalone} % To add tikz figure as standalone elements
+\usepackage{tikz}  % To add tikz figures
+\usepackage{array} % To use alignment such as m{} or b{} in tables
+\usetikzlibrary{datavisualization}
+\usetikzlibrary{positioning}
+\usetikzlibrary{arrows,calc,fit}
+\tikzset{line/.style={draw, thick, -latex'}}
+
 
 %%% DEFINITIONS %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% pretty C++ print.
