Document: AI theory and some tikz

--- a/master-thesis/thesis-master.tex
+++ b/master-thesis/thesis-master.tex
@@ -32,12 +32,16 @@
 \usepackage{todonotes} % great for draft annotations
 
 % Added additionally to the template
+\usepackage{xcolor}
+\colorlet{cyan}[rgb]{cyan}
 \usepackage{standalone} % To add tikz figure as standalone elements
 \usepackage{tikz}  % To add tikz figures
 \usepackage{array} % To use alignment such as m{} or b{} in tables
 \usetikzlibrary{datavisualization}
 \usetikzlibrary{positioning}
 \usetikzlibrary{arrows,calc,fit}
+\usetikzlibrary{shadows}
+\usetikzlibrary{mindmap}
 \tikzset{line/.style={draw, thick, -latex'}}
 
 
