--- a/master-thesis/thesis-master.tex
+++ b/master-thesis/thesis-master.tex
@@ -44,6 +44,8 @@
 \usetikzlibrary{mindmap}
 \tikzset{line/.style={draw, thick, -latex'}}
 
+\setcounter{tocdepth}{4}
+\setcounter{secnumdepth}{4}
 
 %%% DEFINITIONS %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% pretty C++ print.
