Document: implementation wip

--- a/master-thesis/abbreviations.tex
+++ b/master-thesis/abbreviations.tex
@@ -17,6 +17,7 @@
   \acro{BW}[BW]{Bandwidth}
 
   \acro{CEL}[CEL]{Communications Engineering Lab}
+  \acro{CGRAN}[CGRAN]{The Comprehensive GNURadio Archive Network}
   \acro{ComSoc}[ComSoc]{IEEE Communications Society}
   \acro{CPU}[CPU]{Central Processing Unit}
   \acro{CR}[CR]{Cognitive Radio}
@@ -37,6 +38,7 @@
 
   \acro{GPP}[GPP]{General Purpose Processor}
   \acro{GRC}[GRC]{GNU Radio Companion}
+  \acro{GUI}[GUI]{Graphical User Interface}
 
   \acro{NASA}[NASA]{National Aeronautics and Space Administration}
   \acro{LDPC}[LDPC]{Low-Density Parity-Check}
@@ -59,10 +61,16 @@
   \acro{NRZ}[NRZ]{Non-Return-to-Zero}
 
   \acro{Ofcom}[OFCOM]{U.K. Offices of Communications}
+  \acro{OFDM}[OFDM]{Orthogonal frequency division multiplexing}
+  \acro{OOT}[OOT]{out of tree}
 
+  \acro{PDU}[PDU]{Protocol data unit}
+  \acro{PSK}[PSK]{Phase Shift Keying}
   \acro{PU}[PU]{Primary User}
+  \acro{PyBOMBS}[PyBOMBS]{Python Build Overlay Managed Bundled System}
 
   \acro{RV}[RV]{Random Variable}
+  \acro{RF}[RF]{Radio Frequency}
 
   \acro{SC}[SC]{Successive Cancellation}
   \acro{SCC}[SCC41]{Standards Coordinating Committee 41}
@@ -72,6 +80,8 @@
   \acro{SPC}[SPC]{Single-Parity-Check}
   \acro{SSE}[SSE]{Streaming SIMD Extensions}
   \acro{SU}[SU]{Secundary User}
+  \acro{SWIG}[SWIG]{Simplified Wrapper and Interface Generator}
 
  \acro{UML}[UML]{Unified Modeling Language}
+ \acro{USRP}[USRP]{Universal Software Radio Pheripheral}
 \end{acronym}
