Document: Implementation wip

--- a/master-thesis/abbreviations.tex
+++ b/master-thesis/abbreviations.tex
@@ -19,6 +19,7 @@
   \acro{CEL}[CEL]{Communications Engineering Lab}
   \acro{CGRAN}[CGRAN]{The Comprehensive GNURadio Archive Network}
   \acro{ComSoc}[ComSoc]{IEEE Communications Society}
+  \acro{ConvNet}[ConvNet]{Convolutional Neural Networks}
   \acro{CPU}[CPU]{Central Processing Unit}
   \acro{CR}[CR]{Cognitive Radio}
 
@@ -65,6 +66,7 @@
   \acro{OOT}[OOT]{out of tree}
 
   \acro{PDU}[PDU]{Protocol data unit}
+  \acro{pip}[pip]{Pip Installs Packages}
   \acro{PSK}[PSK]{Phase Shift Keying}
   \acro{PU}[PU]{Primary User}
   \acro{PyBOMBS}[PyBOMBS]{Python Build Overlay Managed Bundled System}
@@ -82,6 +84,7 @@
   \acro{SU}[SU]{Secundary User}
   \acro{SWIG}[SWIG]{Simplified Wrapper and Interface Generator}
 
+ \acro{UHD}[UHD]{\ac{USRP} Hardware Driver\texttrademark}
  \acro{UML}[UML]{Unified Modeling Language}
  \acro{USRP}[USRP]{Universal Software Radio Pheripheral}
 \end{acronym}
