--- a/master-thesis/thesis-master.tex
+++ b/master-thesis/thesis-master.tex
@@ -33,6 +33,8 @@
 
 % Added additionally to the template
 \usepackage{xcolor}
+\usepackage{listings}
+\usepackage{amsmath}
 \colorlet{cyan}[rgb]{cyan}
 \usepackage{standalone} % To add tikz figure as standalone elements
 \usepackage{tikz}  % To add tikz figures
