--- a/master-thesis/abbreviations.tex
+++ b/master-thesis/abbreviations.tex
@@ -71,6 +71,7 @@
   \acro{PU}[PU]{Primary User}
   \acro{PyBOMBS}[PyBOMBS]{Python Build Overlay Managed Bundled System}
 
+  \acro{RBF}[RBF]{Radial Basis Function}
   \acro{RV}[RV]{Random Variable}
   \acro{RF}[RF]{Radio Frequency}
 
@@ -82,6 +83,7 @@
   \acro{SPC}[SPC]{Single-Parity-Check}
   \acro{SSE}[SSE]{Streaming SIMD Extensions}
   \acro{SU}[SU]{Secundary User}
+  \acro{SVM}[SVM]{Support Vector Machines}
   \acro{SWIG}[SWIG]{Simplified Wrapper and Interface Generator}
 
  \acro{UHD}[UHD]{\ac{USRP} Hardware Driver\texttrademark}
