--- a/master-thesis/figures/svc_accs_scaled.tex
+++ b/master-thesis/figures/svc_accs_scaled.tex
@@ -4,25 +4,23 @@
 \begin{document}
 \makeatletter
 \pgfplotstableread{ % Taken from the python implementation found in the notebook
-0 92.48	93.31	94.05	94.88
-1 92.90	93.59	94.10	95.06
-2 92.01	92.87	93.50	94.70
-3 87.63	88.69	90.29	92.65
+0 58.14	59.73	60.85	62.61
+1 82.94	83.01	83.53	83.98
+2 89.28	88.07	88.69	89.45
 }\dataset
 \begin{tikzpicture}
 \begin{axis}[ybar,
         width=13cm,
         height=8cm,
-        ymin=80,
+        ymin=55,
         ymax=100,
         xtick=data,
         xticklabels = {
-      	    2,
-            4,
-            10,
-            50
+      	    1,
+            1000,
+            1000000,
         },
-	      xlabel={\# of Neighbors},
+	      xlabel={RBF complexity},
 	      ylabel={Accuracy \%},
         major x tick style = {opacity=0},
         minor x tick num = 1,
@@ -35,8 +33,6 @@
         },
         legend style={at={(0.5,-0.20)},
             anchor=north,legend columns=-1},
-        axis lines*=left,
-        clip=false,
         ]
         \legend{S, M, L, XL},
 \addplot[draw=black,fill=blue] table[x index=0,y index=1] \dataset; %Data1
