--- a/master-thesis/figures/dtc_fit_times_scaled.tex
+++ b/master-thesis/figures/dtc_fit_times_scaled.tex
@@ -4,26 +4,26 @@
 \begin{document}
 \makeatletter
 \pgfplotstableread{ % Taken from the python implementation found in the notebook
-0 92.48	93.31	94.05	94.88
-1 92.90	93.59	94.10	95.06
-2 92.01	92.87	93.50	94.70
-3 87.63	88.69	90.29	92.65
+0 031	026	038	078
+1 051	057	086	176
+2 070	109	149	310
+3 087	116	189	405
 }\dataset
 \begin{tikzpicture}
 \begin{axis}[ybar,
         width=13cm,
         height=8cm,
-        ymin=80,
-        ymax=100,
+        ymin=0,
+        ymax=600,
         xtick=data,
         xticklabels = {
       	    2,
-            4,
+            5,
             10,
             50
         },
-	      xlabel={\# of Neighbors},
-	      ylabel={Accuracy \%},
+	      xlabel={Tree Depth},
+        ylabel={Fit times (ms)},
         major x tick style = {opacity=0},
         minor x tick num = 1,
         minor tick length=2ex,
