--- a/master-thesis/figures/dtc_pred_times_scaled.tex
+++ b/master-thesis/figures/dtc_pred_times_scaled.tex
@@ -4,26 +4,27 @@
 \begin{document}
 \makeatletter
 \pgfplotstableread{ % Taken from the python implementation found in the notebook
-0 92.48	93.31	94.05	94.88
-1 92.90	93.59	94.10	95.06
-2 92.01	92.87	93.50	94.70
-3 87.63	88.69	90.29	92.65
+0 0	  001	001	001
+1 001	001	001	002
+2 001	001	001	002
+3 001	001	002	003
 }\dataset
 \begin{tikzpicture}
 \begin{axis}[ybar,
         width=13cm,
         height=8cm,
-        ymin=80,
-        ymax=100,
+        ymin=0,
+        ymax=32,
+        %enlarge y limits=0.05,
         xtick=data,
         xticklabels = {
       	    2,
-            4,
+            5,
             10,
             50
         },
-	      xlabel={\# of Neighbors},
-	      ylabel={Accuracy \%},
+	      xlabel={Tree Depth},
+        ylabel={Prediction times (ms)},
         major x tick style = {opacity=0},
         minor x tick num = 1,
         minor tick length=2ex,
