--- a/master-thesis/figures/knn_fit_times_scaled.tex
+++ b/master-thesis/figures/knn_fit_times_scaled.tex
@@ -4,17 +4,18 @@
 \begin{document}
 \makeatletter
 \pgfplotstableread{ % Taken from the python implementation found in the notebook
-0 92.48	93.31	94.05	94.88
-1 92.90	93.59	94.10	95.06
-2 92.01	92.87	93.50	94.70
-3 87.63	88.69	90.29	92.65
+0 022	035	037	129
+1 022	035	038	121
+2 021	037	042	121
+3 021	035	037	123
 }\dataset
 \begin{tikzpicture}
 \begin{axis}[ybar,
         width=13cm,
         height=8cm,
-        ymin=80,
-        ymax=100,
+        %ymin=80,
+        ymax=200,
+        enlarge y limits=0.05,
         xtick=data,
         xticklabels = {
       	    2,
@@ -23,7 +24,7 @@
             50
         },
 	      xlabel={\# of Neighbors},
-	      ylabel={Accuracy \%},
+        ylabel={Fit times (ms)},
         major x tick style = {opacity=0},
         minor x tick num = 1,
         minor tick length=2ex,
