--- a/master-thesis/figures/knn_pred_times_scaled.tex
+++ b/master-thesis/figures/knn_pred_times_scaled.tex
@@ -4,17 +4,18 @@
 \begin{document}
 \makeatletter
 \pgfplotstableread{ % Taken from the python implementation found in the notebook
-0 92.48	93.31	94.05	94.88
-1 92.90	93.59	94.10	95.06
-2 92.01	92.87	93.50	94.70
-3 87.63	88.69	90.29	92.65
+0 04	056	145	288
+1 046	067	178	365
+2 067	090	234	463
+3 136	199	431	989
 }\dataset
 \begin{tikzpicture}
 \begin{axis}[ybar,
         width=13cm,
         height=8cm,
-        ymin=80,
-        ymax=100,
+        %ymin=80,
+        ymax=1150,
+        enlarge y limits=0.01,
         xtick=data,
         xticklabels = {
       	    2,
@@ -23,7 +24,7 @@
             50
         },
 	      xlabel={\# of Neighbors},
-	      ylabel={Accuracy \%},
+        ylabel={Predict times (ms)},
         major x tick style = {opacity=0},
         minor x tick num = 1,
         minor tick length=2ex,
