--- a/master-thesis/figures/svc_pred_times.tex
+++ b/master-thesis/figures/svc_pred_times.tex
@@ -4,26 +4,24 @@
 \begin{document}
 \makeatletter
 \pgfplotstableread{ % Taken from the python implementation found in the notebook
-0 92.48	93.31	94.05	94.88
-1 92.90	93.59	94.10	95.06
-2 92.01	92.87	93.50	94.70
-3 87.63	88.69	90.29	92.65
+0 1.685  2.889   7.323   20.492
+1 1.671  2.819   6.73    20.66
+2 1.78   2.856   7.277   27.29
 }\dataset
 \begin{tikzpicture}
 \begin{axis}[ybar,
         width=13cm,
         height=8cm,
-        ymin=80,
-        ymax=100,
+        ymin=0,
+        ymax=33,
         xtick=data,
         xticklabels = {
-      	    2,
-            4,
-            10,
-            50
+      	    1,
+            1000,
+            1000000,
         },
-	      xlabel={\# of Neighbors},
-	      ylabel={Accuracy \%},
+	      xlabel={RBF Complexity},
+        ylabel={Prediction times (s)},
         major x tick style = {opacity=0},
         minor x tick num = 1,
         minor tick length=2ex,
