--- a/master-thesis/abbreviations.tex
+++ b/master-thesis/abbreviations.tex
@@ -72,6 +72,7 @@
   \acro{PyBOMBS}[PyBOMBS]{Python Build Overlay Managed Bundled System}
 
   \acro{RBF}[RBF]{Radial Basis Function}
+  \acro{ReLu}[ReLu]{Rectified Linear Units}
   \acro{RV}[RV]{Random Variable}
   \acro{RF}[RF]{Radio Frequency}
 
@@ -89,4 +90,6 @@
  \acro{UHD}[UHD]{\ac{USRP} Hardware Driver\texttrademark}
  \acro{UML}[UML]{Unified Modeling Language}
  \acro{USRP}[USRP]{Universal Software Radio Pheripheral}
+
+ \acro{VOLK}[VOLK]{Vector Optimized Library of Kernels}
 \end{acronym}
