--- a/master-thesis/thesis-master.tex
+++ b/master-thesis/thesis-master.tex
@@ -32,6 +32,11 @@
 \usepackage{todonotes} % great for draft annotations
 
 % Added additionally to the template
+\definecolor{kit-green100}{rgb}{0,.59,.51}
+\definecolor{kit-green70}{rgb}{.3,.71,.65}
+\definecolor{kit-green50}{rgb}{.50,.79,.75}
+\definecolor{kit-green30}{rgb}{.69,.87,.85}
+\definecolor{kit-green15}{rgb}{.85,.93,.93}
 \usepackage{xcolor}
 \usepackage{listings}
 \usepackage{amsmath}
