Document: corrections from supervisor

--- a/master-thesis/abbreviations.tex
+++ b/master-thesis/abbreviations.tex
@@ -1,7 +1,7 @@
 % This file provides Abbreviations
 % Sorting them is a good idea because the acronym package won't!
 \chapter{Abbreviations}
-\begin{acronym}[TROLL]
+\begin{acronym}[TROLLLLL] % TROLLLL sets the column length
   \acro{AGC}[AGC]{Automatic Gain Control}
   \acro{AKF}[AKF]{Autokorrelationsfunktion}
   \acro{AI}[AI]{Artificial Intelligence}
@@ -35,7 +35,7 @@
 
   \acro{FER}[FER]{Frame Error Rate}
   \acro{FFT}[FFT]{Fast Fourier Transform}
-  \acro{FCC}[FCC]{Federal Coomunications Commision (USA)}
+  \acro{FCC}[FCC]{Federal Communications Commission (USA)}
 
   \acro{GPP}[GPP]{General Purpose Processor}
   \acro{GRC}[GRC]{GNU Radio Companion}
@@ -83,13 +83,13 @@
   \acro{SNR}[SNR]{Signal-to-Noise-Ratio}
   \acro{SPC}[SPC]{Single-Parity-Check}
   \acro{SSE}[SSE]{Streaming SIMD Extensions}
-  \acro{SU}[SU]{Secundary User}
-  \acro{SVM}[SVM]{Support Vector Machines}
+  \acro{SU}[SU]{Secondary User}
+  \acro{SVM}[SVM]{support vector machines}
   \acro{SWIG}[SWIG]{Simplified Wrapper and Interface Generator}
 
  \acro{UHD}[UHD]{\ac{USRP} Hardware Driver\texttrademark}
  \acro{UML}[UML]{Unified Modeling Language}
- \acro{USRP}[USRP]{Universal Software Radio Pheripheral}
+ \acro{USRP}[USRP]{Universal Software Radio Peripheral}
 
  \acro{VOLK}[VOLK]{Vector Optimized Library of Kernels}
 \end{acronym}
