--- a/master-thesis/figures/ai_tree.tex
+++ b/master-thesis/figures/ai_tree.tex
@@ -10,16 +10,16 @@
                 level 2/.style={sibling distance=1.2em}, level distance=3cm]
     \node [font=\bfseries]{Artificial Intelligence} % root
       child {node {Vision}
-        child{node {Image Recognition}}
-        child{node {Machine Vision}}
+        child{node {Image recognition}}
+        child{node {Machine vision}}
       }
-      child {node {planning}}
+      child {node {Planning}}
       child {node {Natural language processing}
-        child{node {content extraction}}
-        child{node {classification}}
-        child{node {machine translation}}
-        child{node {question answering}}
-        child{node {text generation}}
+        child{node {Content extraction}}
+        child{node {Classification}}
+        child{node {Machine translation}}
+        child{node {Question answering}}
+        child{node {Text generation}}
       }
       child {node {Expert systems}}
       child {node {Speech}
@@ -27,11 +27,11 @@
         child{node {Text to speech}}
       }
       child {node {Robotics}}
-      child {node {machine learning}
-        child{node {deep learning}}
-        child{node {supervised learning}}
-        child{node {unsupervised learning}}
-        child{node {reinforcement learning}}
+      child {node {Machine learning}
+        child{node {Deep learning}}
+        child{node {Supervised learning}}
+        child{node {Unsupervised learning}}
+        child{node {Reinforcement learning}}
       }
       ;
 \end{tikzpicture}
