--- a/master-thesis/thesis-master.tex
+++ b/master-thesis/thesis-master.tex
@@ -1,13 +1,13 @@
 % Template author: Johannes Demel
 % Document class provides standardized title page + needed extras.
 \documentclass{cel-thesis/cel-thesis}
-\thesisTitle{TBS}
+\thesisTitle{Evaluation of Machine Learning and Deep Neural Networks for Cognitive Radio Interweave Systems}
 \thesisType{Master's Thesis}
 \thesisAuthor{Nicolas Cuervo-Benavides}
 \thesisAdvisor{Dr.-Ing. Holger Jäkel}
 \thesisHeadOfInstitute{}
 %\thesisHeadOfInstitute{Dr.-Ing. Holger Jäkel}
-\thesisSupervisor{MSc. Felix Wunsch}
+\thesisSupervisor{M.Sc. Felix Wunsch}
 \thesisStartDate{17th May 2017}
 \thesisEndDate{6th December 2017}
 \thesisSignatureDate{06.12.2017}
@@ -37,6 +37,9 @@
 \definecolor{kit-green50}{rgb}{.50,.79,.75}
 \definecolor{kit-green30}{rgb}{.69,.87,.85}
 \definecolor{kit-green15}{rgb}{.85,.93,.93}
+\usepackage{url}
+\def\UrlBreaks{\do\/\do-\do\_}
+\usepackage{hyperref}
 \usepackage{xcolor}
 \usepackage{listings}
 \usepackage{amsmath}
