--- a/master-thesis/figures/ai.tex
+++ b/master-thesis/figures/ai.tex
@@ -33,7 +33,7 @@
       child [machine learning, rotate=37] {node {\textbf{machine learning}}
         child{node {deep learning}}
         child{node {supervised learning}}
-        child{node {unsupervised learning}}
+        child [faded] {node {unsupervised learning}}
         child [faded] {node {reinforcement learning}}
       }
       child [expert systems, rotate=30] {node {Expert systems}}
